--- a/src/app/shared/nav-bar/nav-bar.html
+++ b/src/app/shared/nav-bar/nav-bar.html
@@ -67,8 +67,8 @@
                     </li>                    
 
                     <li>
-                        <a routerLink=""
-                            class="block py-2 px-3 text-slate-600 rounded hover:bg-slate-100 md:hover:bg-transparent md:hover:text-emerald-400 md:p-0 transition-all duration-300">Contacto</a>
+                        <a routerLink="/crear-cuenta"
+                            class="block py-2 px-3 text-slate-600 rounded hover:bg-slate-100 md:hover:bg-transparent md:hover:text-emerald-400 md:p-0 transition-all duration-300">Crear Cuenta</a>
                     </li>
 
                     <li>
