--- a/src/app/shared/formulario/formulario.html
+++ b/src/app/shared/formulario/formulario.html
@@ -17,6 +17,9 @@
             <input [(ngModel)]="nuevoUsuario.phone" name="phone" type="text" placeholder="Teléfono" required
                 class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all">
 
+            <input [(ngModel)]="nuevoUsuario.password" name="password" type="password" placeholder="Contraseña" required
+                class="w-full px-4 py-2 rounded-lg border border-slate-300 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all">
+
             <button type="submit"
                 class="md:col-span-3 bg-emerald-500 hover:bg-emerald-800 text-white font-bold py-3 rounded-lg transition-colors shadow-lg shadow-indigo-200">
                 {{editando? 'Actualizar Usuario':'Registrar Usuario'}}
@@ -44,8 +47,10 @@
                     <td class="p-4 text-slate-600">{{usuario.email}}</td>
                     <td class="p-4 text-slate-600">{{usuario.phone}}</td>
                     <td class="p-4 text-slate-500 font-mono text-xs">
-                        <button (click)="seleccionarParaEditar(usuario)" class="mr-2 bg-blue-500 hover:bg-blue-700 text-white py-1 px-3 rounded">✏️</button>
-                        <button (click)="eliminarUsuario(usuario.id!)" class="bg-red-500 hover:bg-red-700 text-white py-1 px-3 rounded">🗑️</button>
+                        <button (click)="seleccionarParaEditar(usuario)"
+                            class="mr-2 bg-blue-500 hover:bg-blue-700 text-white py-1 px-3 rounded">✏️</button>
+                        <button (click)="eliminarUsuario(usuario.id!)"
+                            class="bg-red-500 hover:bg-red-700 text-white py-1 px-3 rounded">🗑️</button>
                     </td>
                 </tr>
                 }@empty {
