--- a/src/app/shared/login-usuario/login-usuario.html
+++ b/src/app/shared/login-usuario/login-usuario.html
@@ -1,4 +1,4 @@
-<form class="max-w-md mx-auto p-8 bg-white border border-gray-100 rounded-2xl shadow-xl">
+<form (ngSubmit)="iniciarSesion()" class="max-w-md mx-auto p-8 bg-white border border-gray-100 rounded-2xl shadow-xl">
     <div class="h-24 w-full"></div>
     <div class="mb-8 text-center">
         <h2 class="text-2xl font-bold text-gray-800">Bienvenido de nuevo</h2>
@@ -30,11 +30,7 @@
         <a href="#" class="text-sm font-semibold text-blue-600 hover:text-blue-700 transition-colors">¿Olvidaste tu
             contraseña?</a>
     </div>
-
-    <button (click)="iniciarSesion()" type="button"
-        class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-bold rounded-xl text-sm px-5 py-3.5 text-center transition-all duration-200 transform active:scale-[0.98] shadow-lg shadow-blue-500/20">
-        Iniciar Sesión
-    </button>
+    
 
     <button (click)="cerrarSesion()" type="button"
         class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-bold rounded-xl text-sm px-5 py-3.5 text-center transition-all duration-200 transform active:scale-[0.98] shadow-lg shadow-blue-500/20">
