--- a/src/app/shared/nav-bar/nav-bar.html
+++ b/src/app/shared/nav-bar/nav-bar.html
@@ -82,6 +82,11 @@
                             focus:ring-slate-300 font-medium rounded-full text-sm text-center shadow-lg hover:shadow-xl hover:-translate-y-0.5 transition-all duration-300">
                             login
                         </a>
+                        <a routerLink="/cerrar-cession"
+                            class="block mt-2 md:mt-0 py-2.5 px-5 text-red-400 bg-slate-900 hover:bg-slate-800 focus:ring-4 focus:outline-none
+                            focus:ring-slate-300 font-medium rounded-full text-sm text-center shadow-lg hover:shadow-xl hover:-translate-y-0.5 transition-all duration-300">
+                            Cerrar Sesión
+                        </a>
                     </li>
                 </ul>
             </div>
